force-app/main/default/objects/WestPacKey__c/WestPacKey__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>WestPacKey</label>
</CustomObject>