force-app/main/default/objects/WestPacKey__c/fields/endPoint__c.field-meta.xml
<CustomField>
    <fullName>endPoint__c</fullName>
    <description>URL endpoint used to make the callout to westpac api</description>
    <label>endPoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>