force-app/main/default/objects/WestPacKey__c/fields/publishableKey__c.field-meta.xml
<CustomField>
    <fullName>publishableKey__c</fullName>
    <label>publishableKey</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>