force-app/main/default/objects/WestPacKey__c/fields/publishableSecret__c.field-meta.xml
<CustomField>
    <fullName>publishableSecret__c</fullName>
    <label>publishableSecret</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>