force-app/main/default/objects/WestPacKey__c/fields/supplierCode__c.field-meta.xml
<CustomField>
    <fullName>supplierCode__c</fullName>
    <label>supplierCode</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>